--- a/steamlit.ipynb
+++ b/steamlit.ipynb
@@ -40,7 +40,34 @@
     "\n",
     "# 显示第二个表格\n",
     "if st.session_state.show_table2:\n",
-    "    st.table(pd.DataFrame(data2))\n"
+    "    st.table(pd.DataFrame(data2))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import streamlit as st\n",
+    "\n",
+    "# 使用 session_state 来存储选项列表，这样可以在页面刷新后保留选项状态\n",
+    "if 'options' not in st.session_state:\n",
+    "    st.session_state.options = ['Option 1', 'Option 2', 'Option 3']\n",
+    "\n",
+    "# 显示 multiselect 组件\n",
+    "selected_options = st.multiselect(\"Select options:\", st.session_state.options)\n",
+    "\n",
+    "# 显示一个 input box 用于手动添加选项\n",
+    "new_option = st.text_input(\"Add a new option:\")\n",
+    "\n",
+    "# 当用户在 input box 中输入新选项时，添加到选项列表中，并刷新 multiselect\n",
+    "if st.button('Add option'):\n",
+    "    if new_option and new_option not in st.session_state.options:\n",
+    "        st.session_state.options.append(new_option)\n",
+    "        st.experimental_rerun()  # 刷新页面以更新 multiselect 组件\n",
+    "\n",
+    "# 显示选中的选项\n",
+    "st.write(\"Selected options:\", selected_options)\n"
    ]
   }
  ],
